# StudyForge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ai.h  analytics.h  build_mingw.bat  config.h  crud.h  exam.h  main.cpp  models.h  persistence.h  sm2_engine.h
glad/include/KHR/: khrplatform.h
glad/include/glad/: glad.h
glad/src/: glad.c
